--- a/ocr-server/pyproject.toml
+++ b/ocr-server/pyproject.toml
@@ -9,7 +9,10 @@ dependencies = [
     "betterproto>=2.0.0b7",
     "chrome-lens-py>=3.2.0",
     "flask[async]>=3.1.1",
+    "manga-ocr>=0.1.14",
     "oneocr>=1.0.9",
+    "onnxruntime>=1.23.2",
+    "opencv-python-headless>=4.12.0.88",
     "requests>=2.32.4",
     "waitress>=3.0.2",
 ]
